# OpenMultiTrack

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.cursor/rules/: foss-fdroid.mdc  kotlin-modules.mdc  native-audio.mdc  openmultitrack.mdc  project-context.mdc  workflow.mdc
.githooks/: commit-msg  post-checkout  pre-commit  pre-push
.github/workflows/: ci.yml  publish.yml
app/: build.gradle.kts  proguard-rules.pro
audio-engine/: build.gradle.kts
audio-engine/src/main/cpp/: CMakeLists.txt  audio_limits.h  audio_log.h  audio_monitor.cpp  audio_monitor.h  audio_player.cpp  audio_player.h  audio_probe.cpp  audio_probe.h  audio_recorder.cpp  audio_recorder.h  jni_bridge.cpp  spsc_pcm_ring.h  spsc_ring_buffer.h
audio-engine/src/main/cpp/uac2/: android_usb_fs.h  android_usb_io.cpp  android_usb_io.h  config.h  libusb_session.cpp  libusb_session.h  uac2_capture.cpp  uac2_capture.h  uac2_descriptor.cpp  uac2_descriptor.h  uac2_engine_jni.cpp  uac2_format.cpp  uac2_format.h  uac2_jni.cpp  uac2_playback.cpp  uac2_playback.h  uac2_types.h  uac2_urb.h
audio-engine/src/test/cpp/: CMakeLists.txt  uac2_descriptor_test.cpp
docs/: AGENTS.md  PROJECT_STATUS.md  README.md  architecture.md  ci-and-releases.md  control-api.md  flow8-recording-known-good.md  hardware-assumptions.md  mixer-connectivity-and-session-ux-plan.md  mixer-drivers.md  product-roadmap-v2.md  remote-control.md  reproducible-builds.md  technical-risks.md  xr18-routing-automation.md  xr18-transport-latency-reduction.md  xr18-transport-timing-report.md
docs/architecture/: data-flows.md  decisions.md  modules.md  operational-flows.md  overview.md  threading.md
docs/development/: codebase-map.md  conventions.md  fdroid-compliance.md  getting-started.md  testing.md
docs/flow8-reverse-engineering/: 01-usb-midi-implementation.md  02-sysex-dump-format.md  03-bluetooth-le-protocol.md  04-channel-name-extraction.md  05-hardware-probe-findings.md  06-channel-icons-and-stereo-link.md  README.md
docs/modules/: app.md  audio-engine.md  domain.md  mixer-behringer.md  remote-server.md  session-io.md  usb-audio.md
docs/product/: overview.md  roadmap.md  session-format.md  ui-daw.md
docs/uac2-host-plan/: 01-goals-and-constraints.md  02-architecture.md  03-linux-kernel-reference.md  06-api-design.md  (+6 more)
domain/: build.gradle.kts
fdroid/: .gitignore  config.py  config.yml
fdroiddata/: org.openmultitrack.yml
gradle/: libs.versions.toml  version.properties
keystore/: EXPECTED_SIGNER.txt  debug.keystore
mixer-behringer/: build.gradle.kts
remote-server/: build.gradle.kts
scripts/: apk-signer-fingerprint.sh  build-fdroid-repo.sh  compute-semver.sh  generate-branding-icons.py  grant-emulator-usb-host.sh  grant-usb-permission.sh  install-git-hooks.sh  prepare-fdroid-config.sh  prepare-fdroid-icons.sh  prepare-fdroid-metadata.sh  requirements-fdroid.txt  run-dual-device-e2e-tests.sh  run-emulator-with-flow8.sh  run-flow8-hardware-tests.sh  run-flow8-recording-timeline-e2e.sh  run-flow8-soundcheck-e2e.sh  run-uac2-instrumented-tests.sh  run-uac2-native-tests.sh  run-xr18-hardware-tests.sh  run-xr18-routing-e2e.sh  semver-to-version-code.sh  setup-emulator-flow8.sh  tcp-bridge.py  test-compute-semver.sh  verify-apk-signature.sh  verify-fdroid-icons.sh  verify-fdroid-index.sh  write-version-properties.sh
session-io/: build.gradle.kts
site/: index.html
usb-audio/: build.gradle.kts
(+329 files in other folders)
